I am tapped out

--- a/SBAHomePage.html
+++ b/SBAHomePage.html
@@ -1,3 +1,19 @@
+<!--Instructions: HTML & CSS requirements
+Must have 3 pages, keep it consistent
+10 different HTML tags
++ 1 table
++ 2 forms
++ one dropdown menu
++ 1 of each:
+text
+image
+GIFS
+CSS make us of inline, internal, and external styling
++ 5 different CSS selectors
+complimentary colors
+Flexbox/Bootstrap Grid
+2 CSS animations
+-->
 <!DOCTYPE html>
 <html lang="en">
 
