--- a/SBAPage2.html
+++ b/SBAPage2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="SBA.css">
     <meta charset="UTF-8">
@@ -7,60 +8,54 @@
     <title>Document</title>
 </head>
 <style>
-body{
-    background-color:#3D788F;
-}
-div{
-    display: absolute;
-    justify-content: end;
-    align-content: center;
-    border: solid #F4D7E4;
+    body {
+        background-color: #3D788F;
+    }
 
-    margin: 300px auto;
-}
-
-
-
-
-
-footer{
-
-display:flex;
-justify-content:space-evenly;
-flex-direction:;
-align-content:;
-align-items:;
-border: solid #F4D7E4;
-
-}
+    div {
+        display: absolute;
+        justify-content: end;
+        align-content: center;
+        border: solid #F4D7E4;
+        margin: 300px auto;
+    }
 
 
 
 
 
+    footer {
 
+        display: flex;
+        justify-content: space-evenly;
+        flex-direction: ;
+        align-content: ;
+        align-items: ;
+        border: solid #F4D7E4;
 
+    }
 </style>
-<body>
-<div>
-    <form action="/submit-form" method="post">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required>
-    <label for="message">Message:</label><textarea id="message"
-    name="message"></textarea>
 
-    <button type="submit">Submit</button>
-</form></div>
+<body>
+    <div>
+        <form action="/submit-form" method="post">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+            <label for="message">Message:</label><textarea id="message" name="message"></textarea>
+
+            <button type="submit">Submit</button>
+        </form>
+    </div>
 
 </body>
 <div class="dropdown">
-<button class="dropbtn">Menu</button>
-<div class="dropdown-content">
-<a href="https://www.peopleofwalmart.com/">Click Here</a>
-<a href="https://www.peopleofwalmart.com/">Click Here</a>
-<a href="https://www.peopleofwalmart.com/">Click Here</a>
+    <button class="dropbtn">Menu</button>
+    <div class="dropdown-content">
+        <a href="https://www.peopleofwalmart.com/">Click Here</a>
+        <a href="https://www.peopleofwalmart.com/">Click Here</a>
+        <a href="https://www.peopleofwalmart.com/">Click Here</a>
 
-</div>
+    </div>
 
 
 
@@ -72,4 +67,5 @@ border: solid #F4D7E4;
     <a href="SBAPage1.html">Page 1</a>
     <a href="SBAPage2.html">Page 2</a>
 </footer>
+
 </html>
