--- a/SBAPage2.html
+++ b/SBAPage2.html
@@ -19,11 +19,6 @@
         border: solid #F4D7E4;
         margin: 300px auto;
     }
-
-
-
-
-
     footer {
 
         display: flex;
@@ -60,6 +55,17 @@
 
 
 
+</div>
+<div>
+    <div class="tenor-gif-embed" data-postid="4479077587372166734"
+     data-share-method="host" data-aspect-ratio="0.694779" 
+     data-width="100%"><a href="https://tenor.com/view/little-girl-
+     freaks-out-getting-flu-shot-screaming-girl-screaming-kid-loud-
+     scream-yell-gif-4479077587372166734">Little Girl Freaks Out 
+     Getting Flu Shot Screaming Girl GIF</a>from <a href="https://tenor.com/
+     search/little+girl+freaks+out+getting+flu+shot-gifs">Little Girl Freaks Out 
+     Getting Flu Shot GIFs</a></div> <script type="text/javascript" 
+     async src="https://tenor.com/embed.js"></script>
 </div>
 
 <footer>
